add register and login

--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,18 @@
+html, body {
+	height: 100%;
+}
+
+.table-block {
+	display: table;
+	width: 100%;
+}
+
+.table-cell-block {
+	display: table-cell;
+	vertical-align: middle;
+}
+
+
 .form-signin
 {
     max-width: 330px;
